--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,12 @@ jobs:
         git submodule init
         git submodule update
         pip install -U pip && pip install -r requirements.txt && pip install -e . && pip install pytest
+        pip install multiverse-simulators==0.0.6
+        if [[ $(python3 --version) == "Python 3.10"* ]]; then
+          pip install https://nc.uni-bremen.de/public.php/dav/files/fxWQigKXPBtnXsy/?accept=zip
+        elif [[ $(python3 --version) == "Python 3.12"* ]]; then
+          pip install https://nc.uni-bremen.de/public.php/dav/files/nxxi4QSBcYmmxba/?accept=zip
+        fi
         pip install -e ./src/ripple_down_rules_meta
 #        echo "PATH=/opt/ros/overlay_ws/src/Multiverse-Parser/ext/blender:/opt/ros/overlay_ws/src/Multiverse-Parser/USD/linux/lib/python:/opt/ros/overlay_ws/src/Multiverse-Parser/USD/linux/plugin/usd:$PATH" >> $GITHUB_ENV
 #        echo "PYTHONPATH=/opt/ros/overlay_ws/src/Multiverse-Parser/USD/linux/lib/python:/opt/ros/overlay_ws/src/src" >> $GITHUB_ENV
